--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,4 +35,5 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
       - name: check dir
-        run: ls -a
+        run: |
+          ls -a
